# serializer version: 1
# name: test_cli_error_extra_config
  'Vocab file received.'
# ---
# name: test_cli_error_extra_config.1
  dict({
    'details': '[{"type":"extra_forbidden","loc":["cause-an-error"],"msg":"Extra inputs are not permitted","input":true,"url":"https://errors.pydantic.dev/2.12/v/extra_forbidden"}]',
    'error': 'InvalidSessionConfigError',
    'message': '''
      Invalid session config: 1 validation error for SessionConfig
      cause-an-error
        Extra inputs are not permitted [type=extra_forbidden, input_value=True, input_type=bool]
          For further information visit https://errors.pydantic.dev/2.12/v/extra_forbidden
    ''',
  })
# ---
# name: test_cli_error_list
  dict({
    'details': '{"line-number": 1, "msg": "Invalid part of speech: \'Cause an error\'"}',
    'error': 'InvalidVocabFileFormatError',
    'message': "Invalid part of speech: 'Cause an error' (error on line 1)",
  })
# ---
# name: test_cli_error_list.1
  'Session config received.'
# ---
# name: test_cli_error_list.2
  '500 Internal Server Error: Vocab file has not been provided.'
# ---
# name: test_cli_error_missing1_config
  'Vocab file received.'
# ---
# name: test_cli_error_missing1_config.1
  dict({
    'details': '[{"type":"missing","loc":["english-verbal-nouns"],"msg":"Field required","input":{"exclude-nouns":false,"exclude-verbs":false,"exclude-participles":false,"exclude-adjectives":false,"exclude-adverbs":false,"exclude-pronouns":false,"exclude-regulars":false,"exclude-deponents":false,"exclude-semi-deponents":false,"exclude-verb-first-conjugation":false,"exclude-verb-second-conjugation":false,"exclude-verb-third-conjugation":false,"exclude-verb-fourth-conjugation":false,"exclude-verb-mixed-conjugation":false,"exclude-verb-irregular-conjugation":false,"exclude-verb-present-active-indicative":false,"exclude-verb-imperfect-active-indicative":false,"exclude-verb-future-active-indicative":false,"exclude-verb-perfect-active-indicative":false,"exclude-verb-pluperfect-active-indicative":false,"exclude-verb-future-perfect-active-indicative":false,"exclude-verb-present-passive-indicative":false,"exclude-verb-imperfect-passive-indicative":false,"exclude-verb-future-passive-indicative":false,"exclude-verb-perfect-passive-indicative":false,"exclude-verb-pluperfect-passive-indicative":false,"exclude-verb-future-perfect-passive-indicative":false,"exclude-verb-present-active-subjunctive":false,"exclude-verb-imperfect-active-subjunctive":false,"exclude-verb-perfect-active-subjunctive":false,"exclude-verb-pluperfect-active-subjunctive":false,"exclude-verb-present-active-imperative":false,"exclude-verb-future-active-imperative":false,"exclude-verb-present-passive-imperative":false,"exclude-verb-future-passive-imperative":false,"exclude-verb-present-active-infinitive":false,"exclude-verb-future-active-infinitive":false,"exclude-verb-perfect-active-infinitive":false,"exclude-verb-present-passive-infinitive":false,"exclude-verb-future-passive-infinitive":false,"exclude-verb-perfect-passive-infinitive":false,"exclude-verb-singular":false,"exclude-verb-plural":false,"exclude-verb-1st-person":false,"exclude-verb-2nd-person":false,"exclude-verb-3rd-person":false,"exclude-participle-present-active":false,"exclude-participle-perfect-passive":false,"exclude-participle-future-active":false,"exclude-gerundives":false,"exclude-participle-masculine":false,"exclude-participle-feminine":false,"exclude-participle-neuter":false,"exclude-participle-nominative":false,"exclude-participle-vocative":false,"exclude-participle-accusative":false,"exclude-participle-genitive":false,"exclude-participle-dative":false,"exclude-participle-ablative":false,"exclude-participle-singular":false,"exclude-participle-plural":false,"exclude-gerunds":false,"exclude-supines":false,"exclude-noun-first-declension":false,"exclude-noun-second-declension":false,"exclude-noun-third-declension":false,"exclude-noun-fourth-declension":false,"exclude-noun-fifth-declension":false,"exclude-noun-irregular-declension":false,"exclude-noun-nominative":false,"exclude-noun-vocative":false,"exclude-noun-accusative":false,"exclude-noun-genitive":false,"exclude-noun-dative":false,"exclude-noun-ablative":false,"exclude-noun-singular":false,"exclude-noun-plural":false,"exclude-adjective-212-declension":false,"exclude-adjective-third-declension":false,"exclude-adjective-masculine":false,"exclude-adjective-feminine":false,"exclude-adjective-neuter":false,"exclude-adjective-nominative":false,"exclude-adjective-vocative":false,"exclude-adjective-accusative":false,"exclude-adjective-genitive":false,"exclude-adjective-dative":false,"exclude-adjective-ablative":false,"exclude-adjective-singular":false,"exclude-adjective-plural":false,"exclude-adjective-positive":false,"exclude-adjective-comparative":false,"exclude-adjective-superlative":false,"exclude-adverb-positive":false,"exclude-adverb-comparative":false,"exclude-adverb-superlative":false,"exclude-pronoun-masculine":false,"exclude-pronoun-feminine":false,"exclude-pronoun-neuter":false,"exclude-pronoun-nominative":false,"exclude-pronoun-vocative":false,"exclude-pronoun-accusative":false,"exclude-pronoun-genitive":false,"exclude-pronoun-dative":false,"exclude-pronoun-ablative":false,"exclude-pronoun-singular":false,"exclude-pronoun-plural":false,"include-typein-engtolat":true,"include-typein-lattoeng":true,"include-parse":true,"include-inflect":true,"include-principal-parts":true,"include-multiplechoice-engtolat":true,"include-multiplechoice-lattoeng":true,"english-subjunctives":true,"number-multiplechoice-options":3},"url":"https://errors.pydantic.dev/2.12/v/missing"}]',
    'error': 'InvalidSessionConfigError',
    'message': '''
      Invalid session config: 1 validation error for SessionConfig
      english-verbal-nouns
        Field required [type=missing, input_value={'exclude-nouns': False, ...tiplechoice-options': 3}, input_type=dict]
          For further information visit https://errors.pydantic.dev/2.12/v/missing
    ''',
  })
# ---
# name: test_cli_error_missing2_config
  'Vocab file received.'
# ---
# name: test_cli_error_missing2_config.1
  dict({
    'details': '[{"type":"missing","loc":["number-multiplechoice-options"],"msg":"Field required","input":{"exclude-nouns":false,"exclude-verbs":false,"exclude-participles":false,"exclude-adjectives":false,"exclude-adverbs":false,"exclude-pronouns":false,"exclude-regulars":false,"exclude-deponents":false,"exclude-semi-deponents":false,"exclude-verb-first-conjugation":false,"exclude-verb-second-conjugation":false,"exclude-verb-third-conjugation":false,"exclude-verb-fourth-conjugation":false,"exclude-verb-mixed-conjugation":false,"exclude-verb-irregular-conjugation":false,"exclude-verb-present-active-indicative":false,"exclude-verb-imperfect-active-indicative":false,"exclude-verb-future-active-indicative":false,"exclude-verb-perfect-active-indicative":false,"exclude-verb-pluperfect-active-indicative":false,"exclude-verb-future-perfect-active-indicative":false,"exclude-verb-present-passive-indicative":false,"exclude-verb-imperfect-passive-indicative":false,"exclude-verb-future-passive-indicative":false,"exclude-verb-perfect-passive-indicative":false,"exclude-verb-pluperfect-passive-indicative":false,"exclude-verb-future-perfect-passive-indicative":false,"exclude-verb-present-active-subjunctive":false,"exclude-verb-imperfect-active-subjunctive":false,"exclude-verb-perfect-active-subjunctive":false,"exclude-verb-pluperfect-active-subjunctive":false,"exclude-verb-present-active-imperative":false,"exclude-verb-future-active-imperative":false,"exclude-verb-present-passive-imperative":false,"exclude-verb-future-passive-imperative":false,"exclude-verb-present-active-infinitive":false,"exclude-verb-future-active-infinitive":false,"exclude-verb-perfect-active-infinitive":false,"exclude-verb-present-passive-infinitive":false,"exclude-verb-future-passive-infinitive":false,"exclude-verb-perfect-passive-infinitive":false,"exclude-verb-singular":false,"exclude-verb-plural":false,"exclude-verb-1st-person":false,"exclude-verb-2nd-person":false,"exclude-verb-3rd-person":false,"exclude-participle-present-active":false,"exclude-participle-perfect-passive":false,"exclude-participle-future-active":false,"exclude-gerundives":false,"exclude-participle-masculine":false,"exclude-participle-feminine":false,"exclude-participle-neuter":false,"exclude-participle-nominative":false,"exclude-participle-vocative":false,"exclude-participle-accusative":false,"exclude-participle-genitive":false,"exclude-participle-dative":false,"exclude-participle-ablative":false,"exclude-participle-singular":false,"exclude-participle-plural":false,"exclude-gerunds":false,"exclude-supines":false,"exclude-noun-first-declension":false,"exclude-noun-second-declension":false,"exclude-noun-third-declension":false,"exclude-noun-fourth-declension":false,"exclude-noun-fifth-declension":false,"exclude-noun-irregular-declension":false,"exclude-noun-nominative":false,"exclude-noun-vocative":false,"exclude-noun-accusative":false,"exclude-noun-genitive":false,"exclude-noun-dative":false,"exclude-noun-ablative":false,"exclude-noun-singular":false,"exclude-noun-plural":false,"exclude-adjective-212-declension":false,"exclude-adjective-third-declension":false,"exclude-adjective-masculine":false,"exclude-adjective-feminine":false,"exclude-adjective-neuter":false,"exclude-adjective-nominative":false,"exclude-adjective-vocative":false,"exclude-adjective-accusative":false,"exclude-adjective-genitive":false,"exclude-adjective-dative":false,"exclude-adjective-ablative":false,"exclude-adjective-singular":false,"exclude-adjective-plural":false,"exclude-adjective-positive":false,"exclude-adjective-comparative":false,"exclude-adjective-superlative":false,"exclude-adverb-positive":false,"exclude-adverb-comparative":false,"exclude-adverb-superlative":false,"exclude-pronoun-masculine":false,"exclude-pronoun-feminine":false,"exclude-pronoun-neuter":false,"exclude-pronoun-nominative":false,"exclude-pronoun-vocative":false,"exclude-pronoun-accusative":false,"exclude-pronoun-genitive":false,"exclude-pronoun-dative":false,"exclude-pronoun-ablative":false,"exclude-pronoun-singular":false,"exclude-pronoun-plural":false,"include-typein-engtolat":true,"include-typein-lattoeng":true,"include-parse":true,"include-inflect":true,"include-principal-parts":true,"include-multiplechoice-engtolat":true,"include-multiplechoice-lattoeng":true,"english-subjunctives":true,"english-verbal-nouns":true},"url":"https://errors.pydantic.dev/2.12/v/missing"}]',
    'error': 'InvalidSessionConfigError',
    'message': '''
      Invalid session config: 1 validation error for SessionConfig
      number-multiplechoice-options
        Field required [type=missing, input_value={'exclude-nouns': False, ...ish-verbal-nouns': True}, input_type=dict]
          For further information visit https://errors.pydantic.dev/2.12/v/missing
    ''',
  })
# ---
# name: test_cli_error_type1_config
  'Vocab file received.'
# ---
# name: test_cli_error_type1_config.1
  dict({
    'details': '[{"type":"int_type","loc":["number-multiplechoice-options"],"msg":"Input should be a valid integer","input":"error","url":"https://errors.pydantic.dev/2.12/v/int_type"}]',
    'error': 'InvalidSessionConfigError',
    'message': '''
      Invalid session config: 1 validation error for SessionConfig
      number-multiplechoice-options
        Input should be a valid integer [type=int_type, input_value='error', input_type=str]
          For further information visit https://errors.pydantic.dev/2.12/v/int_type
    ''',
  })
# ---
# name: test_cli_error_type2_config
  'Vocab file received.'
# ---
# name: test_cli_error_type2_config.1
  dict({
    'details': '[{"type": "int_type", "loc": "number-of-questions", "msg": "Input should be a valid integer"}]',
    'error': 'InvalidSessionConfigError',
    'message': "Invalid session config: 'number-of-questions' must be an integer.",
  })
# ---
# name: test_cli_normal
  'Vocab file received.'
# ---
# name: test_cli_normal.1
  'Session config received.'
# ---
# name: test_cli_normal.2
  list([
    dict({
      'answer': 'in',
      'choices': list([
        'acer',
        'in',
        'laetus',
      ]),
      'prompt': 'into',
      'question_type': 'MultipleChoiceEngToLatQuestion',
    }),
    dict({
      'answers': list([
        dict({
          'case': 'nominative',
          'number': 'plural',
        }),
        dict({
          'case': 'dative',
          'number': 'singular',
        }),
        dict({
          'case': 'genitive',
          'number': 'singular',
        }),
        dict({
          'case': 'vocative',
          'number': 'plural',
        }),
      ]),
      'dictionary_entry': 'farmer: agricola, agricolae, (m)',
      'main_answer': dict({
        'case': 'nominative',
        'number': 'plural',
      }),
      'prompt': 'agricolae',
      'question_type': 'ParseWordLatToCompQuestion',
    }),
    dict({
      'answers': list([
        'canem',
        'canis',
      ]),
      'main_answer': 'canem',
      'prompt': 'dog',
      'question_type': 'TypeInEngToLatQuestion',
    }),
    dict({
      'principal_parts': list([
        'capio',
        'capere',
        'cepi',
        'captus',
      ]),
      'prompt': 'capio',
      'question_type': 'PrincipalPartsQuestion',
    }),
    dict({
      'answers': list([
        'laetorum',
      ]),
      'components': 'positive genitive plural masculine',
      'main_answer': 'laetorum',
      'prompt': 'happy: laetus, laeta, laetum, (2-1-2)',
      'question_type': 'ParseWordCompToLatQuestion',
    }),
    dict({
      'answers': list([
        'puero',
      ]),
      'main_answer': 'puero',
      'prompt': 'by the boy',
      'question_type': 'TypeInEngToLatQuestion',
    }),
    dict({
      'answers': list([
        dict({
          'mood': 'indicative',
          'number': 'plural',
          'person': '1st person',
          'tense': 'perfect',
          'voice': 'active',
        }),
      ]),
      'dictionary_entry': 'take: capio, capere, cepi, captus',
      'main_answer': dict({
        'mood': 'indicative',
        'number': 'plural',
        'person': '1st person',
        'tense': 'perfect',
        'voice': 'active',
      }),
      'prompt': 'cepimus',
      'question_type': 'ParseWordLatToCompQuestion',
    }),
    dict({
      'answers': list([
        dict({
          'case': 'nominative',
          'degree': 'comparative',
          'gender': 'feminine',
          'number': 'singular',
        }),
        dict({
          'case': 'nominative',
          'degree': 'comparative',
          'gender': 'masculine',
          'number': 'singular',
        }),
        dict({
          'case': 'vocative',
          'degree': 'comparative',
          'gender': 'feminine',
          'number': 'singular',
        }),
        dict({
          'case': 'vocative',
          'degree': 'comparative',
          'gender': 'masculine',
          'number': 'singular',
        }),
      ]),
      'dictionary_entry': 'light: levis, leve, (3-2)',
      'main_answer': dict({
        'case': 'nominative',
        'degree': 'comparative',
        'gender': 'masculine',
        'number': 'singular',
      }),
      'prompt': 'levior',
      'question_type': 'ParseWordLatToCompQuestion',
    }),
    dict({
      'answers': list([
        dict({
          'case': 'accusative',
          'number': 'singular',
        }),
      ]),
      'dictionary_entry': 'dog: canis, canis, (m)',
      'main_answer': dict({
        'case': 'accusative',
        'number': 'singular',
      }),
      'prompt': 'canem',
      'question_type': 'ParseWordLatToCompQuestion',
    }),
    dict({
      'answers': list([
        'nomine',
      ]),
      'main_answer': 'nomine',
      'prompt': 'by the name',
      'question_type': 'TypeInEngToLatQuestion',
    }),
    dict({
      'answers': list([
        dict({
          'mood': 'subjunctive',
          'number': 'singular',
          'person': '3rd person',
          'tense': 'perfect',
          'voice': 'active',
        }),
      ]),
      'dictionary_entry': 'say: inquam',
      'main_answer': dict({
        'mood': 'subjunctive',
        'number': 'singular',
        'person': '3rd person',
        'tense': 'perfect',
        'voice': 'active',
      }),
      'prompt': 'inquiat',
      'question_type': 'ParseWordLatToCompQuestion',
    }),
    dict({
      'answers': list([
        dict({
          'case': 'genitive',
          'number': 'plural',
        }),
      ]),
      'dictionary_entry': 'boy: puer, pueri, (m)',
      'main_answer': dict({
        'case': 'genitive',
        'number': 'plural',
      }),
      'prompt': 'puerorum',
      'question_type': 'ParseWordLatToCompQuestion',
    }),
    dict({
      'answer': 'levis',
      'choices': list([
        'e',
        'audio',
        'levis',
      ]),
      'prompt': 'light',
      'question_type': 'MultipleChoiceEngToLatQuestion',
    }),
    dict({
      'answers': list([
        'agricolas',
      ]),
      'components': 'accusative plural',
      'main_answer': 'agricolas',
      'prompt': 'farmer: agricola, agricolae, (m)',
      'question_type': 'ParseWordCompToLatQuestion',
    }),
    dict({
      'answers': list([
        'ample',
        'astronomic',
        'astronomical',
        'bangy',
        'bear-size',
        'big',
        'biggish',
        'blown-up',
        'bombastic',
        'bouff',
        'broad',
        'brobdingnagian',
        'bulky',
        'capacious',
        'colossal',
        'comprehensive',
        'conspicuous',
        'cosmic',
        'declamatory',
        'deep',
        'double',
        'elephantine',
        'enceinte',
        'enlary',
        'enormous',
        'epic',
        'expectant',
        'extended',
        'extensive',
        'full-size',
        'galactic',
        'gargantuan',
        'generous',
        'giant',
        'gigantic',
        'grand',
        'gravid',
        'great',
        'heavy',
        'heroic',
        'huge',
        'hulking',
        'hulky',
        'humongous',
        'immense',
        'important',
        'jumbo',
        'king-size',
        'large',
        'large-mouth',
        'large-scale',
        'larger-than-life',
        'largish',
        'life-size',
        'life-sy',
        'lifesize',
        'macro',
        'macroscopic',
        'macroscopical',
        'magnanimous',
        'mammoth',
        'man-size',
        'massive',
        'medium-large',
        'monolithic',
        'monstrous',
        'monumental',
        'mountainous',
        'orotund',
        'outsize',
        'outsized',
        'overlarge',
        'oversize',
        'oversized',
        'plump',
        'pregnant',
        'prodigious',
        'prominent',
        'puffy',
        'queen-size',
        'rangy',
        'rhetorical',
        'significant',
        'sizable',
        'sizeable',
        'spacious',
        'stupendous',
        'super',
        'thump',
        'titanic',
        'too large',
        'tremendous',
        'tumid',
        'turgid',
        'vast',
        'volume',
        'voluminous',
        'wallopy',
        'whack',
        'whoppy',
        'wide',
        'wide-rangy',
        'with ch',
      ]),
      'main_answer': 'large',
      'prompt': 'ingentia',
      'question_type': 'TypeInLatToEngQuestion',
    }),
    dict({
      'answers': list([
        dict({
          'case': 'nominative',
          'gender': 'masculine',
          'number': 'plural',
        }),
        dict({
          'case': 'dative',
          'gender': 'feminine',
          'number': 'singular',
        }),
        dict({
          'case': 'dative',
          'gender': 'masculine',
          'number': 'singular',
        }),
        dict({
          'case': 'dative',
          'gender': 'neuter',
          'number': 'singular',
        }),
      ]),
      'dictionary_entry': 'that: ille, illa, illud',
      'main_answer': dict({
        'case': 'nominative',
        'gender': 'masculine',
        'number': 'plural',
      }),
      'prompt': 'illi',
      'question_type': 'ParseWordLatToCompQuestion',
    }),
    dict({
      'answer': 'laetus',
      'choices': list([
        'e',
        'laetus',
        'ego',
      ]),
      'prompt': 'happy',
      'question_type': 'MultipleChoiceEngToLatQuestion',
    }),
    dict({
      'answers': list([
        dict({
          'case': 'nominative',
          'number': 'plural',
        }),
        dict({
          'case': 'genitive',
          'number': 'singular',
        }),
        dict({
          'case': 'vocative',
          'number': 'plural',
        }),
      ]),
      'dictionary_entry': 'boy: puer, pueri, (m)',
      'main_answer': dict({
        'case': 'nominative',
        'number': 'plural',
      }),
      'prompt': 'pueri',
      'question_type': 'ParseWordLatToCompQuestion',
    }),
    dict({
      'answer': 'capio',
      'choices': list([
        'hic',
        'capio',
        'ego',
      ]),
      'prompt': 'I take',
      'question_type': 'MultipleChoiceEngToLatQuestion',
    }),
    dict({
      'answers': list([
        'of that',
      ]),
      'main_answer': 'of that',
      'prompt': 'illius',
      'question_type': 'TypeInLatToEngQuestion',
    }),
    dict({
      'principal_parts': list([
        'levis',
        'leve',
      ]),
      'prompt': 'levis',
      'question_type': 'PrincipalPartsQuestion',
    }),
    dict({
      'principal_parts': list([
        'ingens',
        'ingentis',
      ]),
      'prompt': 'ingens',
      'question_type': 'PrincipalPartsQuestion',
    }),
    dict({
      'answer': 'inquam',
      'choices': list([
        'ingredior',
        'laetus',
        'inquam',
      ]),
      'prompt': 'I say',
      'question_type': 'MultipleChoiceEngToLatQuestion',
    }),
    dict({
      'answers': list([
        dict({
          'case': 'ablative',
          'degree': 'comparative',
          'gender': 'feminine',
          'number': 'singular',
        }),
        dict({
          'case': 'ablative',
          'degree': 'comparative',
          'gender': 'masculine',
          'number': 'singular',
        }),
        dict({
          'case': 'ablative',
          'degree': 'comparative',
          'gender': 'neuter',
          'number': 'singular',
        }),
      ]),
      'dictionary_entry': 'large: ingens, ingentis, (3-1)',
      'main_answer': dict({
        'case': 'ablative',
        'degree': 'comparative',
        'gender': 'masculine',
        'number': 'singular',
      }),
      'prompt': 'ingentiore',
      'question_type': 'ParseWordLatToCompQuestion',
    }),
    dict({
      'answer': 'good',
      'choices': list([
        'good',
        'I say',
        'dog',
      ]),
      'prompt': 'bonus',
      'question_type': 'MultipleChoiceLatToEngQuestion',
    }),
    dict({
      'answer': 'name',
      'choices': list([
        'name',
        'from',
        'girl',
      ]),
      'prompt': 'nomen',
      'question_type': 'MultipleChoiceLatToEngQuestion',
    }),
    dict({
      'answer': 'puer',
      'choices': list([
        'puer',
        'capio',
        'in',
      ]),
      'prompt': 'boy',
      'question_type': 'MultipleChoiceEngToLatQuestion',
    }),
    dict({
      'answer': 'puer',
      'choices': list([
        'laetus',
        'puer',
        'nomen',
      ]),
      'prompt': 'boy',
      'question_type': 'MultipleChoiceEngToLatQuestion',
    }),
    dict({
      'answers': list([
        'ablazer',
        'abstemiouser',
        'airier',
        'autofluorescenter',
        'bioluminescenter',
        'brighter',
        'buoyanter',
        'calorie-freeer',
        'cander',
        'candescenter',
        'casualer',
        'cleaner',
        'clearer',
        'deficienter',
        'digestibler',
        'easier',
        'fainter',
        'fat-freeer',
        'fatler',
        'floatier',
        'flooder',
        'floodlighter',
        'fluorescenter',
        'fooler',
        'frivolouser',
        'gentler',
        'idler',
        'iller',
        'illuminateder',
        'incandescenter',
        'inflameder',
        'insignificanter',
        'insufficienter',
        'lampliter',
        'light-armer',
        'light-coloreder',
        'light-dutier',
        'light-footer',
        'light-headeder',
        'lighter',
        'lighter-than-airer',
        'lightheadeder',
        'lighting-uper',
        'lightly-armer',
        'lightsomer',
        'lightweighter',
        'liter',
        'litter',
        'livider',
        'looser',
        'low-caler',
        'low-densitier',
        'luminescenter',
        'more ablaze',
        'more abstemious',
        'more airy',
        'more autofluorescent',
        'more bioluminescent',
        'more bright',
        'more buoyant',
        'more calorie-free',
        'more cand',
        'more candescent',
        'more casual',
        'more clean',
        'more clear',
        'more deficient',
        'more digestible',
        'more easy',
        'more faint',
        'more fat-free',
        'more fatle',
        'more floaty',
        'more flood',
        'more floodlight',
        'more fluorescent',
        'more fool',
        'more frivolous',
        'more gentle',
        'more idle',
        'more ill',
        'more illuminated',
        'more incandescent',
        'more inflamed',
        'more insignificant',
        'more insufficient',
        'more lamplit',
        'more light',
        'more light-arm',
        'more light-colored',
        'more light-duty',
        'more light-foot',
        'more light-headed',
        'more lighter-than-air',
        'more lightheaded',
        'more lighting-up',
        'more lightly-arm',
        'more lightsome',
        'more lightweight',
        'more lit',
        'more lite',
        'more livid',
        'more loose',
        'more low-cal',
        'more low-density',
        'more luminescent',
        'more nonfat',
        'more pale',
        'more palish',
        'more pastel',
        'more phosphorescent',
        'more powdery',
        'more promiscuous',
        'more pure',
        'more redden',
        'more scant',
        'more shallow',
        'more short',
        'more sick',
        'more sluttish',
        'more soft',
        'more sunlit',
        'more sunny',
        'more sunstruck',
        'more swoon',
        'more temperate',
        'more thin',
        'more trippy',
        'more unaccented',
        'more unchaste',
        'more uncloud',
        'more undemanding',
        'more unimportant',
        'more unstress',
        'more wakeful',
        'more wanton',
        'more weak',
        'more well-light',
        'more white',
        'nonfatter',
        'paler',
        'palisher',
        'pasteller',
        'phosphorescenter',
        'powderier',
        'promiscuouser',
        'purer',
        'reddener',
        'scanter',
        'shallower',
        'shorter',
        'sicker',
        'sluttisher',
        'softer',
        'sunlitter',
        'sunnier',
        'sunstrucker',
        'swooner',
        'temperater',
        'thinner',
        'trippier',
        'unaccenteder',
        'unchaster',
        'unclouder',
        'undemandinger',
        'unimportanter',
        'unstresser',
        'wakefuler',
        'wantoner',
        'weaker',
        'well-lighter',
        'whiter',
        'worse',
      ]),
      'main_answer': 'lighter',
      'prompt': 'levioris',
      'question_type': 'TypeInLatToEngQuestion',
    }),
    dict({
      'answers': list([
        'has',
      ]),
      'components': 'accusative plural feminine',
      'main_answer': 'has',
      'prompt': 'this: hic, haec, hoc',
      'question_type': 'ParseWordCompToLatQuestion',
    }),
    dict({
      'principal_parts': list([
        'laetus',
        'laeta',
        'laetum',
      ]),
      'prompt': 'laetus',
      'question_type': 'PrincipalPartsQuestion',
    }),
    dict({
      'answer': 'laetus',
      'choices': list([
        'laetus',
        'puella',
        'hic',
      ]),
      'prompt': 'happy',
      'question_type': 'MultipleChoiceEngToLatQuestion',
    }),
    dict({
      'answer': 'light',
      'choices': list([
        'into',
        'light',
        'good',
      ]),
      'prompt': 'levis',
      'question_type': 'MultipleChoiceLatToEngQuestion',
    }),
    dict({
      'answers': list([
        dict({
          'case': 'nominative',
          'gender': 'masculine',
          'number': 'plural',
        }),
        dict({
          'case': 'dative',
          'gender': 'feminine',
          'number': 'singular',
        }),
        dict({
          'case': 'dative',
          'gender': 'masculine',
          'number': 'singular',
        }),
        dict({
          'case': 'dative',
          'gender': 'neuter',
          'number': 'singular',
        }),
      ]),
      'dictionary_entry': 'that: ille, illa, illud',
      'main_answer': dict({
        'case': 'nominative',
        'gender': 'masculine',
        'number': 'plural',
      }),
      'prompt': 'illi',
      'question_type': 'ParseWordLatToCompQuestion',
    }),
    dict({
      'answers': list([
        'acute',
        'bang-up',
        'bully',
        'cork',
        'cracky',
        'cutty',
        'dandy',
        'discriminating',
        'exquisite',
        'good',
        'great',
        'groovy',
        'incisive',
        'intense',
        'keen',
        'knifelike',
        'lancinate',
        'neat',
        'nifty',
        'not bad',
        'old',
        'peachy',
        'penetrative',
        'penetraty',
        'perceptive',
        'piercing',
        'sharp',
        'slap-up',
        'smash',
        'stabby',
        'swell',
      ]),
      'main_answer': 'keen',
      'prompt': 'acri',
      'question_type': 'TypeInLatToEngQuestion',
    }),
    dict({
      'principal_parts': list([
        'bonus',
        'bona',
        'bonum',
      ]),
      'prompt': 'bonus',
      'question_type': 'PrincipalPartsQuestion',
    }),
    dict({
      'answer': 'conor',
      'choices': list([
        'levis',
        'ingredior',
        'conor',
      ]),
      'prompt': 'I try',
      'question_type': 'MultipleChoiceEngToLatQuestion',
    }),
    dict({
      'answer': 'happy',
      'choices': list([
        'happy',
        'good',
        'keen',
      ]),
      'prompt': 'laetus',
      'question_type': 'MultipleChoiceLatToEngQuestion',
    }),
    dict({
      'answers': list([
        dict({
          'case': 'accusative',
          'degree': 'comparative',
          'gender': 'feminine',
          'number': 'plural',
        }),
        dict({
          'case': 'nominative',
          'degree': 'comparative',
          'gender': 'masculine',
          'number': 'plural',
        }),
        dict({
          'case': 'vocative',
          'degree': 'comparative',
          'gender': 'feminine',
          'number': 'plural',
        }),
        dict({
          'case': 'accusative',
          'degree': 'comparative',
          'gender': 'masculine',
          'number': 'plural',
        }),
        dict({
          'case': 'vocative',
          'degree': 'comparative',
          'gender': 'masculine',
          'number': 'plural',
        }),
        dict({
          'case': 'nominative',
          'degree': 'comparative',
          'gender': 'feminine',
          'number': 'plural',
        }),
      ]),
      'dictionary_entry': 'good: bonus, bona, bonum, (2-1-2)',
      'main_answer': dict({
        'case': 'nominative',
        'degree': 'comparative',
        'gender': 'masculine',
        'number': 'plural',
      }),
      'prompt': 'meliores',
      'question_type': 'ParseWordLatToCompQuestion',
    }),
    dict({
      'principal_parts': list([
        'hic',
        'haec',
        'hoc',
      ]),
      'prompt': 'hic',
      'question_type': 'PrincipalPartsQuestion',
    }),
    dict({
      'answers': list([
        'inquimus',
      ]),
      'main_answer': 'inquimus',
      'prompt': 'we say',
      'question_type': 'TypeInEngToLatQuestion',
    }),
    dict({
      'answers': list([
        'capio',
      ]),
      'main_answer': 'capio',
      'prompt': 'I take',
      'question_type': 'TypeInEngToLatQuestion',
    }),
    dict({
      'answer': 'laetus',
      'choices': list([
        'nomen',
        'laetus',
        'ingredior',
      ]),
      'prompt': 'happy',
      'question_type': 'MultipleChoiceEngToLatQuestion',
    }),
    dict({
      'answer': 'nomen',
      'choices': list([
        'in',
        'capio',
        'nomen',
      ]),
      'prompt': 'name',
      'question_type': 'MultipleChoiceEngToLatQuestion',
    }),
    dict({
      'answers': list([
        'puellae',
        'puellas',
      ]),
      'main_answer': 'puellae',
      'prompt': 'girls',
      'question_type': 'TypeInEngToLatQuestion',
    }),
    dict({
      'answers': list([
        'inquii',
      ]),
      'components': 'perfect active indicative singular 1st person',
      'main_answer': 'inquii',
      'prompt': 'say: inquam',
      'question_type': 'ParseWordCompToLatQuestion',
    }),
    dict({
      'answers': list([
        'ablaze',
        'abstemious',
        'airy',
        'autofluorescent',
        'bioluminescent',
        'bright',
        'buoyant',
        'calorie-free',
        'cand',
        'candescent',
        'casual',
        'clean',
        'clear',
        'deficient',
        'digestible',
        'easy',
        'faint',
        'fat-free',
        'fatle',
        'floaty',
        'flood',
        'floodlight',
        'fluorescent',
        'fool',
        'frivolous',
        'gentle',
        'idle',
        'ill',
        'illuminated',
        'incandescent',
        'inflamed',
        'insignificant',
        'insufficient',
        'lamplit',
        'light',
        'light-arm',
        'light-colored',
        'light-duty',
        'light-foot',
        'light-headed',
        'lighter-than-air',
        'lightheaded',
        'lighting-up',
        'lightly-arm',
        'lightsome',
        'lightweight',
        'lit',
        'lite',
        'livid',
        'loose',
        'low-cal',
        'low-density',
        'luminescent',
        'nonfat',
        'pale',
        'palish',
        'pastel',
        'phosphorescent',
        'powdery',
        'promiscuous',
        'pure',
        'redden',
        'scant',
        'shallow',
        'short',
        'sick',
        'sluttish',
        'soft',
        'sunlit',
        'sunny',
        'sunstruck',
        'swoon',
        'temperate',
        'thin',
        'trippy',
        'unaccented',
        'unchaste',
        'uncloud',
        'undemanding',
        'unimportant',
        'unstress',
        'wakeful',
        'wanton',
        'weak',
        'well-light',
        'white',
      ]),
      'main_answer': 'light',
      'prompt': 'leve',
      'question_type': 'TypeInLatToEngQuestion',
    }),
    dict({
      'answer': 'puella',
      'choices': list([
        'puer',
        'puella',
        'e',
      ]),
      'prompt': 'girl',
      'question_type': 'MultipleChoiceEngToLatQuestion',
    }),
    dict({
      'answers': list([
        'ingredienda',
        'ingrediendae',
        'ingrediendam',
        'ingrediendarum',
        'ingrediendas',
        'ingrediende',
        'ingrediendi',
        'ingrediendis',
        'ingrediendo',
        'ingrediendorum',
        'ingrediendos',
        'ingrediendum',
        'ingrediendus',
        'ingrediens',
        'ingrediente',
        'ingredientem',
        'ingredientes',
        'ingredienti',
        'ingredientia',
        'ingredientibus',
        'ingredientis',
        'ingredientium',
        'ingressa',
        'ingressae',
        'ingressam',
        'ingressarum',
        'ingressas',
        'ingresse',
        'ingressi',
        'ingressis',
        'ingresso',
        'ingressorum',
        'ingressos',
        'ingressum',
        'ingressura',
        'ingressurae',
        'ingressuram',
        'ingressurarum',
        'ingressuras',
        'ingressure',
        'ingressuri',
        'ingressuris',
        'ingressuro',
        'ingressurorum',
        'ingressuros',
        'ingressurum',
        'ingressurus',
        'ingressus',
      ]),
      'main_answer': 'ingrediens',
      'prompt': 'entering',
      'question_type': 'TypeInEngToLatQuestion',
    }),
    dict({
      'answers': list([
        'acceptablest',
        'adeptest',
        'admirablest',
        'advantageousest',
        'amplest',
        'angelicalest',
        'angelicest',
        'bang-uppest',
        'beatificest',
        'beneficialest',
        'best',
        'bulliest',
        'closest',
        'completest',
        'corkest',
        'crackiest',
        'dandiest',
        'dearest',
        'decentest',
        'dependablest',
        'discriminatingest',
        'echtest',
        'ecofriendliest',
        'effectivest',
        'eldest',
        'estimablest',
        'expertest',
        'extremely acceptable',
        'extremely adept',
        'extremely admirable',
        'extremely advantageous',
        'extremely ample',
        'extremely angelic',
        'extremely angelical',
        'extremely bang-up',
        'extremely beatific',
        'extremely beneficial',
        'extremely bully',
        'extremely close',
        'extremely complete',
        'extremely cork',
        'extremely cracky',
        'extremely dandy',
        'extremely dear',
        'extremely decent',
        'extremely dependable',
        'extremely discriminating',
        'extremely echt',
        'extremely ecofriendly',
        'extremely effective',
        'extremely estimable',
        'extremely expert',
        'extremely favorable',
        'extremely favourable',
        'extremely fortunate',
        'extremely fresh',
        'extremely full',
        'extremely genuine',
        'extremely good',
        'extremely good enough',
        'extremely goodish',
        'extremely goody-goody',
        'extremely great',
        'extremely green',
        'extremely groovy',
        'extremely healthful',
        'extremely healthy',
        'extremely honest',
        'extremely honorable',
        'extremely hot',
        'extremely in eff',
        'extremely in force',
        'extremely instagood',
        'extremely intellectual',
        'extremely just',
        'extremely keen',
        'extremely near',
        'extremely neat',
        'extremely nice',
        'extremely nifty',
        'extremely not bad',
        'extremely old',
        'extremely operative',
        'extremely opportune',
        'extremely peachy',
        'extremely pleasing',
        'extremely practice',
        'extremely proficient',
        'extremely redeemy',
        'extremely redemptive',
        'extremely reputable',
        'extremely respectable',
        'extremely right',
        'extremely righteous',
        'extremely ripe',
        'extremely safe',
        'extremely saint',
        'extremely saintlike',
        'extremely saintly',
        'extremely salutary',
        'extremely satisfactory',
        'extremely save',
        'extremely secure',
        'extremely serious',
        'extremely skilful',
        'extremely skilled',
        'extremely skillful',
        'extremely slap-up',
        'extremely smash',
        'extremely solid',
        'extremely sound',
        'extremely superb',
        'extremely swell',
        'extremely unspoiled',
        'extremely unspoilt',
        'extremely upright',
        'extremely well',
        'extremely well behave',
        'extremely well-behave',
        'extremely white',
        'favorablest',
        'favourablest',
        'fortunatest',
        'freshest',
        'fullest',
        'genuinest',
        'good enoughest',
        'goodishest',
        'goody-goodiest',
        'greatest',
        'greenest',
        'grooviest',
        'healthfulest',
        'healthiest',
        'honestest',
        'honorablest',
        'hottest',
        'in effest',
        'in forcest',
        'instagoodest',
        'intellectualest',
        'justest',
        'keenest',
        'most acceptable',
        'most adept',
        'most admirable',
        'most advantageous',
        'most ample',
        'most angelic',
        'most angelical',
        'most bang-up',
        'most beatific',
        'most beneficial',
        'most bully',
        'most close',
        'most complete',
        'most cork',
        'most cracky',
        'most dandy',
        'most dear',
        'most decent',
        'most dependable',
        'most discriminating',
        'most echt',
        'most ecofriendly',
        'most effective',
        'most estimable',
        'most expert',
        'most favorable',
        'most favourable',
        'most fortunate',
        'most fresh',
        'most full',
        'most genuine',
        'most good',
        'most good enough',
        'most goodish',
        'most goody-goody',
        'most great',
        'most green',
        'most groovy',
        'most healthful',
        'most healthy',
        'most honest',
        'most honorable',
        'most hot',
        'most in eff',
        'most in force',
        'most instagood',
        'most intellectual',
        'most just',
        'most keen',
        'most near',
        'most neat',
        'most nice',
        'most nifty',
        'most not bad',
        'most old',
        'most operative',
        'most opportune',
        'most peachy',
        'most pleasing',
        'most practice',
        'most proficient',
        'most redeemy',
        'most redemptive',
        'most reputable',
        'most respectable',
        'most right',
        'most righteous',
        'most ripe',
        'most safe',
        'most saint',
        'most saintlike',
        'most saintly',
        'most salutary',
        'most satisfactory',
        'most save',
        'most secure',
        'most serious',
        'most skilful',
        'most skilled',
        'most skillful',
        'most slap-up',
        'most smash',
        'most solid',
        'most sound',
        'most superb',
        'most swell',
        'most unspoiled',
        'most unspoilt',
        'most upright',
        'most well',
        'most well behave',
        'most well-behave',
        'most white',
        'nearest',
        'neatest',
        'nicest',
        'niftiest',
        'not baddest',
        'oldest',
        'operativest',
        'opportunest',
        'peachiest',
        'pleasingest',
        'practicest',
        'proficientest',
        'quite acceptable',
        'quite adept',
        'quite admirable',
        'quite advantageous',
        'quite ample',
        'quite angelic',
        'quite angelical',
        'quite bang-up',
        'quite beatific',
        'quite beneficial',
        'quite bully',
        'quite close',
        'quite complete',
        'quite cork',
        'quite cracky',
        'quite dandy',
        'quite dear',
        'quite decent',
        'quite dependable',
        'quite discriminating',
        'quite echt',
        'quite ecofriendly',
        'quite effective',
        'quite estimable',
        'quite expert',
        'quite favorable',
        'quite favourable',
        'quite fortunate',
        'quite fresh',
        'quite full',
        'quite genuine',
        'quite good',
        'quite good enough',
        'quite goodish',
        'quite goody-goody',
        'quite great',
        'quite green',
        'quite groovy',
        'quite healthful',
        'quite healthy',
        'quite honest',
        'quite honorable',
        'quite hot',
        'quite in eff',
        'quite in force',
        'quite instagood',
        'quite intellectual',
        'quite just',
        'quite keen',
        'quite near',
        'quite neat',
        'quite nice',
        'quite nifty',
        'quite not bad',
        'quite old',
        'quite operative',
        'quite opportune',
        'quite peachy',
        'quite pleasing',
        'quite practice',
        'quite proficient',
        'quite redeemy',
        'quite redemptive',
        'quite reputable',
        'quite respectable',
        'quite right',
        'quite righteous',
        'quite ripe',
        'quite safe',
        'quite saint',
        'quite saintlike',
        'quite saintly',
        'quite salutary',
        'quite satisfactory',
        'quite save',
        'quite secure',
        'quite serious',
        'quite skilful',
        'quite skilled',
        'quite skillful',
        'quite slap-up',
        'quite smash',
        'quite solid',
        'quite sound',
        'quite superb',
        'quite swell',
        'quite unspoiled',
        'quite unspoilt',
        'quite upright',
        'quite well',
        'quite well behave',
        'quite well-behave',
        'quite white',
        'rather acceptable',
        'rather adept',
        'rather admirable',
        'rather advantageous',
        'rather ample',
        'rather angelic',
        'rather angelical',
        'rather bang-up',
        'rather beatific',
        'rather beneficial',
        'rather bully',
        'rather close',
        'rather complete',
        'rather cork',
        'rather cracky',
        'rather dandy',
        'rather dear',
        'rather decent',
        'rather dependable',
        'rather discriminating',
        'rather echt',
        'rather ecofriendly',
        'rather effective',
        'rather estimable',
        'rather expert',
        'rather favorable',
        'rather favourable',
        'rather fortunate',
        'rather fresh',
        'rather full',
        'rather genuine',
        'rather good',
        'rather good enough',
        'rather goodish',
        'rather goody-goody',
        'rather great',
        'rather green',
        'rather groovy',
        'rather healthful',
        'rather healthy',
        'rather honest',
        'rather honorable',
        'rather hot',
        'rather in eff',
        'rather in force',
        'rather instagood',
        'rather intellectual',
        'rather just',
        'rather keen',
        'rather near',
        'rather neat',
        'rather nice',
        'rather nifty',
        'rather not bad',
        'rather old',
        'rather operative',
        'rather opportune',
        'rather peachy',
        'rather pleasing',
        'rather practice',
        'rather proficient',
        'rather redeemy',
        'rather redemptive',
        'rather reputable',
        'rather respectable',
        'rather right',
        'rather righteous',
        'rather ripe',
        'rather safe',
        'rather saint',
        'rather saintlike',
        'rather saintly',
        'rather salutary',
        'rather satisfactory',
        'rather save',
        'rather secure',
        'rather serious',
        'rather skilful',
        'rather skilled',
        'rather skillful',
        'rather slap-up',
        'rather smash',
        'rather solid',
        'rather sound',
        'rather superb',
        'rather swell',
        'rather unspoiled',
        'rather unspoilt',
        'rather upright',
        'rather well',
        'rather well behave',
        'rather well-behave',
        'rather white',
        'redeemiest',
        'redemptivest',
        'reputablest',
        'respectablest',
        'righteousest',
        'rightest',
        'ripest',
        'safest',
        'saintest',
        'saintliest',
        'saintlikest',
        'salutariest',
        'satisfactoriest',
        'savest',
        'securest',
        'seriousest',
        'skilfulest',
        'skilledest',
        'skillfulest',
        'slap-upest',
        'smashest',
        'solidest',
        'soundest',
        'superbest',
        'swellest',
        'too acceptable',
        'too adept',
        'too admirable',
        'too advantageous',
        'too ample',
        'too angelic',
        'too angelical',
        'too bang-up',
        'too beatific',
        'too beneficial',
        'too bully',
        'too close',
        'too complete',
        'too cork',
        'too cracky',
        'too dandy',
        'too dear',
        'too decent',
        'too dependable',
        'too discriminating',
        'too echt',
        'too ecofriendly',
        'too effective',
        'too estimable',
        'too expert',
        'too favorable',
        'too favourable',
        'too fortunate',
        'too fresh',
        'too full',
        'too genuine',
        'too good',
        'too good enough',
        'too goodish',
        'too goody-goody',
        'too great',
        'too green',
        'too groovy',
        'too healthful',
        'too healthy',
        'too honest',
        'too honorable',
        'too hot',
        'too in eff',
        'too in force',
        'too instagood',
        'too intellectual',
        'too just',
        'too keen',
        'too near',
        'too neat',
        'too nice',
        'too nifty',
        'too not bad',
        'too old',
        'too operative',
        'too opportune',
        'too peachy',
        'too pleasing',
        'too practice',
        'too proficient',
        'too redeemy',
        'too redemptive',
        'too reputable',
        'too respectable',
        'too right',
        'too righteous',
        'too ripe',
        'too safe',
        'too saint',
        'too saintlike',
        'too saintly',
        'too salutary',
        'too satisfactory',
        'too save',
        'too secure',
        'too serious',
        'too skilful',
        'too skilled',
        'too skillful',
        'too slap-up',
        'too smash',
        'too solid',
        'too sound',
        'too superb',
        'too swell',
        'too unspoiled',
        'too unspoilt',
        'too upright',
        'too well',
        'too well behave',
        'too well-behave',
        'too white',
        'unspoiledest',
        'unspoiltest',
        'uprightest',
        'very acceptable',
        'very adept',
        'very admirable',
        'very advantageous',
        'very ample',
        'very angelic',
        'very angelical',
        'very bang-up',
        'very beatific',
        'very beneficial',
        'very bully',
        'very close',
        'very complete',
        'very cork',
        'very cracky',
        'very dandy',
        'very dear',
        'very decent',
        'very dependable',
        'very discriminating',
        'very echt',
        'very ecofriendly',
        'very effective',
        'very estimable',
        'very expert',
        'very favorable',
        'very favourable',
        'very fortunate',
        'very fresh',
        'very full',
        'very genuine',
        'very good',
        'very good enough',
        'very goodish',
        'very goody-goody',
        'very great',
        'very green',
        'very groovy',
        'very healthful',
        'very healthy',
        'very honest',
        'very honorable',
        'very hot',
        'very in eff',
        'very in force',
        'very instagood',
        'very intellectual',
        'very just',
        'very keen',
        'very near',
        'very neat',
        'very nice',
        'very nifty',
        'very not bad',
        'very old',
        'very operative',
        'very opportune',
        'very peachy',
        'very pleasing',
        'very practice',
        'very proficient',
        'very redeemy',
        'very redemptive',
        'very reputable',
        'very respectable',
        'very right',
        'very righteous',
        'very ripe',
        'very safe',
        'very saint',
        'very saintlike',
        'very saintly',
        'very salutary',
        'very satisfactory',
        'very save',
        'very secure',
        'very serious',
        'very skilful',
        'very skilled',
        'very skillful',
        'very slap-up',
        'very smash',
        'very solid',
        'very sound',
        'very superb',
        'very swell',
        'very unspoiled',
        'very unspoilt',
        'very upright',
        'very well',
        'very well behave',
        'very well-behave',
        'very white',
        'well behavest',
        'well-behavest',
        'whitest',
      ]),
      'main_answer': 'best',
      'prompt': 'optimis',
      'question_type': 'TypeInLatToEngQuestion',
    }),
  ])
# ---
